package creational.factory.pizza.ViDu;

public enum PizzaType {
    HAI_SAN,MAM
}
